I think I fixed it.

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,39 +1,22 @@
 steps:
-  # Step 1: Install necessary tools
-  - name: 'python:3.9'
-    entrypoint: /bin/bash
-    args:
-      - '-c'
-      - |
-        pip install --upgrade pip setuptools wheel build twine
-        pip install keyring keyrings.google-artifact-registry-auth
+  - name: 'python'
+    entrypoint: 'pip'
+    args: ['install', 'twine', 'build', 'keyrings.google-artifactregistry-auth']
 
-  # Step 2: Build the Python package (sdist and wheel)
-  - name: 'python:3.9'
-    entrypoint: /bin/bash
-    args:
-      - '-c'
-      - |
-        python -m build
+  - name: 'python'
+    entrypoint: 'python'
+    args: ['-m', 'build']
 
-  # Step 3: Configure .pypirc for Twine authentication
-  - name: 'python:3.9'
-    entrypoint: /bin/bash
+  - name: 'python'
+    entrypoint: 'python'
     args:
-      - '-c'
-      - |
-        mkdir -p ~/.config/pip
-        printf "[distutils]\nindex-servers = \n  ${_REPO_NAME}\n\n[${_REPO_NAME}]\nrepository: https://${_REGION}-python.pkg.dev/${PROJECT_ID}/${_REPO_NAME}/\n" > ~/.pypirc
-        printf "[global]\nextra-index-url = https://${_REGION}-python.pkg.dev/${PROJECT_ID}/${_REPO_NAME}/simple/\n" > ~/.config/pip/pip.conf
-
-  # Step 4: Upload the package to Artifact Registry using twine
-  - name: 'python:3.9'
-    entrypoint: /bin/bash
-    args:
-      - '-c'
-      - |
-        twine upload --repository-url https://${_REGION}-python.pkg.dev/${PROJECT_ID}/${_REPO_NAME}/ dist/*
-
+      - '-m'
+      - 'twine'
+      - 'upload'
+      - '--repository-url'
+      - 'https://${_REGION}-python.pkg.dev/${PROJECT_ID}/${_REPO_NAME}/'
+      - 'dist/*'
+  
 substitutions: 
   _REPO_NAME: 'home-ai-ai-python'
   _REGION: 'us-central1'
